--- a/carriergot2/src/main/resources/application.properties
+++ b/carriergot2/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/${DB_HOST}
+spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/${DB_DB}
 spring.datasource.username=root
 spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
