--- a/carriergot2/src/main/resources/application.properties
+++ b/carriergot2/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
-#<<<<<<< Updated upstream
-#spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/${DB_DB}
-#=======
-spring.datasource.url=jdbc:mysql://localhost:3306/myschema
-#>>>>>>> Stashed changes
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/${DB_DB}
+spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/project
+#spring.datasource.password=root
