--- a/carriergot2/src/main/resources/application.properties
+++ b/carriergot2/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/${DB_DB}
+#<<<<<<< Updated upstream
+#spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/${DB_DB}
+#=======
+spring.datasource.url=jdbc:mysql://localhost:3306/myschema
+#>>>>>>> Stashed changes
 spring.datasource.username=root
-spring.datasource.password=${DB_PASS}
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql=true
