--- a/carriergot2/src/main/resources/application.properties
+++ b/carriergot2/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false
 spring.datasource.username=root
-spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/${DB_DB}
-spring.datasource.password=${DB_PASS}
+spring.datasource.password=manager
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 #spring.datasource.url=jdbc:mysql://localhost:3306/project
 #spring.datasource.password=root
