--- a/carriergot2/src/main/resources/application.properties
+++ b/carriergot2/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/myschema
 spring.datasource.username=root
-spring.datasource.password=manager
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 #spring.datasource.url=jdbc:mysql://localhost:3306/project
