feat: Enable and Config Envers Audit.

--- a/carriergot2/src/main/resources/application.properties
+++ b/carriergot2/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+
+#Envers Configs
+#spring.jpa.properties.hibernate.integrator_provider=com.task2.carriergot2.integrators.AuditIntegrator
