--- a/carriergot2/src/main/resources/application.properties
+++ b/carriergot2/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.jpa.hibernate.ddl-auto = update
-spring.datasource.url=jdbc:mysql://localhost:3306/mrc_db?useSSL=false
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/${DB_DB}
 spring.datasource.username=root
-spring.datasource.password=manager
+spring.datasource.password=${DB_PASS}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql=true
 
