--- a/carriergot2/build.gradle
+++ b/carriergot2/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 	implementation 'org.projectlombok:lombok:1.18.20'
 	annotationProcessor 'org.projectlombok:lombok:1.18.18'
 	implementation 'javax.validation:validation-api:2.0.1.Final'
+	implementation 'com.h2database:h2'
 }
 
 tasks.named('test') {
